--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,15 @@ body {
   padding-right: 10px;
 }
 
+.column-left_alignLeft{
+  float: left;
+  width: 20%;
+  text-align: left;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+
 .column-right_alignRightBigger{
   float: right;
   width: 50%;
