--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
 .column-left_alignLeft{
   float: left;
   width: 20%;
-  text-align: left;
+  text-align: right;
   padding-left: 10px;
   padding-right: 10px;
 }
